# ubuntu-file

./: README.md
Pysource Kalman filter/: orange_detector.py
cv_test/: my-posenet.py  none_test_hsv.py  reader.py  test_hsv.py
follower_car/follow_module/: CMakeLists.txt  package.xml  urdf.rviz
person_follower_file/: follower.py  follower_old.py  fuzzy.py  laserTracker.py  laseroncamera.py  new-posenet.py
save_file/: save_error.py  save_image.py  save_scan.py  save_trajectory.py  saver.py
smartcar_ws/localization_mapping/: CMakeLists.txt
smartcar_ws/localization_mapping/include/localization_mapping/data_pretreat/: data_pretreat_flow.hpp
smartcar_ws/localization_mapping/include/localization_mapping/global_defination/: global_defination.h.in
smartcar_ws/localization_mapping/include/localization_mapping/publisher/: range_image_publisher.hpp
smartcar_ws/localization_mapping/include/localization_mapping/sensor_data/: cloud_data.hpp
smartcar_ws/localization_mapping/include/localization_mapping/subscriber/: cloud_subscriber.hpp
smartcar_ws/localization_mapping/launch/: mapping.launch
smartcar_ws/localization_mapping/msg/: range_image.msg
smartcar_ws/localization_mapping/scripts/: plane.py  ros_test.py  test.py
smartcar_ws/localization_mapping/src/apps/: data_pretreat_node.cpp
smartcar_ws/localization_mapping/src/publisher/: cloud_publisher.cpp
smartcar_ws/localization_mapping/src/subscriber/: cloud_subscriber.cpp
控制程序备份/: PID+fuzzy_follower.py  PID_follower.py  jetonly_fuzzy+follower.py  only_fuzzy+follower.py
视觉代码/: laser_camera_pose.py
(+129 files in other folders)
